Added over ons pagina and algemene voorwaarden

--- a/themes/frank/layouts/partials/page-header.html
+++ b/themes/frank/layouts/partials/page-header.html
@@ -1,21 +1,13 @@
+
 {{ $featured_image := .Params.featured_image }}
 {{ if $featured_image }}
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
   {{ $featured_image := (trim $featured_image "/") | absURL }}
-  <header class="cover bg-top" style="background-image: url('{{ $featured_image }}');">
-    <div class="pb3-m pb6-l bg-black-60">
-      {{ partial "site-navigation.html" . }}
 
-        <h1 class="f2 f1-l white-90 lh-title">{{ .Title | default .Site.Title }}</h1>
-
-
-    </div>
-  </header>
-{{ else }}
-  <header>
-    <div class="{{ .Site.Params.background_color_class | default "bg-white" }}">
-      {{ partial "site-navigation.html" . }}
-    </div>
+  <header class="white m10-b h-large cover" style="background-image: url('{{ $featured_image }}');">
+    <div class="layout p3-lr  clearfix">
+    {{ partial "site-navigation.html"  (dict "color" "white" "menu" .Site.Menus.main "base" .Site.BaseURL)}}
+  </div>
   </header>
 {{ end }}
 
