--- a/themes/frank/layouts/over-mij/list.html
+++ b/themes/frank/layouts/over-mij/list.html
@@ -1,10 +1,7 @@
-{{ define "header" }}
-{{/* We can overide any block in the baseof file be defining it in the template */}}
-{{ partial "page-header.html" .}}
-{{ end }}
 
 {{ define "main" }}
 <article>
+	<img class="m6-b" src="/images/frankspin.jpg" alt="">
   <div class="layout  p3-lr m6-b">
   	<div class="w-large center">
 			{{ .Content }}
