Privacy and contact page

--- a/themes/frank/layouts/contact/list.html
+++ b/themes/frank/layouts/contact/list.html
@@ -17,7 +17,7 @@
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">Ik zoek hulp bij het volgende project</label>
-          <textarea class="form-field sanserif" name="" id="" cols="30" rows="10" placeholder="Omschrijf je project in paar zinnen"></textarea>
+          <textarea class="form-field sanserif" name="" id="" cols="30" rows="10" placeholder="Omschrijf je project in een paar zinnen"></textarea>
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">De deadline hier voor is</label>
@@ -40,6 +40,23 @@
         </div>
         <button class="button f4">Verstuur</button>
       </form>
+      <h2 class="f2 m3-b">Contactgegevens</h2>
+      <div class="grid-halves">
+        <p class="m3-b">
+          <strong class="block f5">Bezoekersadres</strong>
+          Frank Spin<br>
+          Lübeckweg 2, <br>
+          9723 HE Groningen<br>
+          <small>(Het kwadraat, 3de verdieping)</small></p>
+          <p>
+            <strong class="block f5">Correspondentieadres</strong>
+            Frank Spin<br>
+            Van iddekingeweg 138-30 <br>
+            9721 CL Groningen<br>
+            <a href="mailto:info@frankspin.nl">info@frankspin.nl</a><br>
+            <a href="tel:+31611728843">06 11 2 88 43</a>
+            </p>
+      </div>
 		</div>
 	</div>
 </article>
