--- a/themes/frank/src/css/_helpers.css
+++ b/themes/frank/src/css/_helpers.css
@@ -20,7 +20,10 @@
   font-size: 3rem;
 }
 .f2 {
-  font-size: 2.25rem;
+  font-size: 1.85rem;
+  @media (--breakpoint-small) {
+    font-size: 2.25rem;
+  }
 }
 .f3 {
   font-size: 1.4rem;
