--- a/themes/frank/layouts/werk/list.html
+++ b/themes/frank/layouts/werk/list.html
@@ -21,6 +21,12 @@
       <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
         <img src="/images/logos/jorritsmabouw-logo.svg" class="m3-b" alt="" width="70px">
       </a>
+      <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
+        <img src="/images/logos/3sixty5-logo.svg" class="m3-b" alt="" width="120px">
+      </a>
+      <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
+        <img src="/images/logos/lxr-logo.svg" class="m3-b" alt="">
+      </a>
     </div>
 
     
