updated werk page

--- a/themes/frank/layouts/over-mij/list.html
+++ b/themes/frank/layouts/over-mij/list.html
@@ -1,7 +1,7 @@
 
 {{ define "main" }}
 <article>
-	<img class="m6-b" src="/images/frankspin.jpg" alt="">
+	<img class="m6-b block center" src="/images/frankspin.jpg" alt="">
   <div class="layout  p3-lr m6-b">
   	<div class="w-large center">
 			{{ .Content }}
