--- a/themes/frank/layouts/werk/list.html
+++ b/themes/frank/layouts/werk/list.html
@@ -1,34 +1,15 @@
 {{ define "main" }}
 <article>
   <div class="layout  p3-lr m6-b">
-    
     <div class="grid-fourths">
       {{ range (where .Data.Pages "Type" "werk") }}
         <a href="{{.Permalink}}" class="bg-gray-light block p3-lr p3-t hover-effect center-center m3-b">
-          <img src="{{.Params.logo}}" class="m3-b" alt="">
+          <img src="{{.Params.logo}}" class="m3-b" alt="" style="max-height: 90px">
         </a>
       {{ end }}
-
-
-      <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
-        <img src="/images/logos/tjboxingtrainingclubs-logo.svg" class="m3-b" alt="">
-      </a>
-      <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
-        <img src="/images/logos/jorritsmabouw-logo.svg" class="m3-b" alt="" width="70px">
-      </a>
-      <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
-        <img src="/images/logos/3sixty5-logo.svg" class="m3-b" alt="" width="120px">
-      </a>
-      <a href="#" class="bg-gray-light p3-lr p3-t hover-effect center-center m3-b">
-        <img src="/images/logos/lxr-logo.svg" class="m3-b" alt="">
-      </a>
     </div>
-
-    
-
     <div class="w-large center">
       {{ .Content }}
-      
 		</div>
 	</div>
 </article>
