--- a/themes/frank/src/css/_styles.css
+++ b/themes/frank/src/css/_styles.css
@@ -43,7 +43,9 @@
 .footer-navigation-items {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
 
   & li {
     margin-bottom: 1rem;
@@ -91,4 +93,9 @@
   display: grid;
   grid-template-columns: 0.45fr 1fr;
   grid-gap: 3rem;
+}
+
+
+.case {
+  max-width: 1170px;
 }
