--- a/themes/frank/layouts/over-mij/list.html
+++ b/themes/frank/layouts/over-mij/list.html
@@ -1,9 +1,8 @@
-
-{{ define "main" }}
+ {{ define "main" }}
 <article>
-	<img class="m6-b block center" src="/images/frank_portret.jpg" alt="">
-  <div class="layout p3-lr m6-b">
-  	<div class="w-large center">
+	<img class="m6-b block center" src="/images/frank_portret.jpg" alt="Portretfoto van Frank Spin">
+	<div class="layout p3-lr m6-b">
+		<div class="w-large center">
 			{{ .Content }}
 		</div>
 	</div>
