--- a/themes/frank/layouts/contact/list.html
+++ b/themes/frank/layouts/contact/list.html
@@ -1,19 +1,19 @@
 {{ define "main" }}
 <article>
   <div class="layout  p3-lr m6-b">
-  	<div class="w-large center">
+    <div class="w-large center">
       <div class="m3-b">
         {{ .Content }}
       </div>
-      
+
       <form action="contact" netlify-honeypot="postcode" action="bedankt" netlify class="m6-b block clearfix">
         <div class="m6-b">
           <label class="block m1-b f3" for="">Mijn naam is</label>
-          <input  class="form-field" type="text" name="contactpersoon" required placeholder="Voor- en achternaam" />
+          <input class="form-field" type="text" name="contactpersoon" required placeholder="Voor- en achternaam" />
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">Ik werk voor</label>
-          <input  class="form-field" type="text" name="organisatie" required placeholder="Organisatie of instantie" />
+          <input class="form-field" type="text" name="organisatie" required placeholder="Organisatie of instantie" />
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">Ik zoek hulp bij het volgende project</label>
@@ -21,22 +21,22 @@
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">De deadline hier voor is</label>
-          <input  class="form-field" type="text" name="deadline" required placeholder="Datum of periode" />
+          <input class="form-field" type="text" name="deadline" required placeholder="Datum of periode" />
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">Mijn budget is ongeveer</label>
-          <select class="form-field"  name="budget" id="">
+          <select class="form-field" name="budget" id="">
             <option value="#">---</option>
-            <option value="niveau0">Onder de &euro; 5000</option>
-            <option value="niveau1">Tussen &euro; 5000 en &euro; 10.000</option>
-            <option value="niveau2">Tussen &euro; 10.000 en &euro; 20.000</option>
-            <option value="niveau3">Tussen &euro; 20.000 en &euro; 45.000</option>
-            <option value="niveau4">Meer dan &euro; 45.000</option>
+            <option value="niveau0">Onder de &euro; 2500</option>
+            <option value="niveau1">Tussen &euro; 2500 en &euro; 5.000</option>
+            <option value="niveau2">Tussen &euro; 5.000 en &euro; 10.000</option>
+            <option value="niveau3">Tussen &euro; 10.000 en &euro; 25.000</option>
+            <option value="niveau4">Meer dan &euro; 25.000</option>
           </select>
         </div>
         <div class="m6-b">
           <label class="block m1-b f3" for="">Je kan mij bereiken op</label>
-          <input  class="form-field" type="email" name="email" required placeholder="Mijn e-mailadres is" />
+          <input class="form-field" type="email" name="email" required placeholder="Mijn e-mailadres is" />
         </div>
         <button class="button f4">Verstuur</button>
       </form>
@@ -44,21 +44,25 @@
       <div class="grid-halves">
         <p class="m3-b">
           <strong class="block f5">Bezoekersadres</strong>
-          Frank Spin<br>
-          Lübeckweg 2, <br>
-          9723 HE Groningen<br>
-          <small>(Het kwadraat, 3de verdieping)</small></p>
-          <p>
-            <strong class="block f5">Correspondentieadres</strong>
-            Frank Spin<br>
-            Van iddekingeweg 138-30 <br>
-            9721 CL Groningen<br>
-            <a href="mailto:info@frankspin.nl">info@frankspin.nl</a><br>
-            <a href="tel:+31611728843">06 11 2 88 43</a>
-            </p>
+          Frank Spin
+          <br> Lübeckweg 2,
+          <br> 9723 HE Groningen
+          <br>
+          <small>(Het kwadraat, 3de verdieping)</small>
+        </p>
+        <p>
+          <strong class="block f5">Correspondentieadres</strong>
+          Frank Spin
+          <br> Van iddekingeweg 138-30
+          <br> 9721 CL Groningen
+          <br>
+          <a href="mailto:info@frankspin.nl">info@frankspin.nl</a>
+          <br>
+          <a href="tel:+31611728843">06 11 2 88 43</a>
+        </p>
       </div>
-		</div>
-	</div>
+    </div>
+  </div>
 </article>
 
 {{ end }}
