--- a/themes/frank/layouts/partials/home-header.html
+++ b/themes/frank/layouts/partials/home-header.html
@@ -6,12 +6,12 @@
     </h1>
     <div class="grid-1-3">
       <div class="m3-b">
-        <h4 class="f3 red m1">{{ .Params.Subtitle | markdownify }}</h4>
+        <h4 class="f3 red m0-b-small">{{ .Params.Subtitle | markdownify }}</h4>
         <p class="f4">{{ .Description | markdownify }}</p>
       </div>
       <div class="m3-b">
-        <h4 class="f3 red m1">Waar ik je mee kan helpen</h4>
-        <p class="f4 list-h m0 p0 wrap">
+        <h4 class="f3 red m0-b-small">Waar ik je mee kan helpen</h4>
+        <p class="f4 list-h m6-b p0 wrap">
           Interfaces ontwerpen, Websites bouwen, Web apps ontwikkelen, Front-end ondersteuning, Website analyses, CMS implementaties
           en React ondersteuning
         </p>
