--- a/themes/frank/layouts/contact/list.html
+++ b/themes/frank/layouts/contact/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <article>
   <div class="layout  p3-lr m6-b">
-    <div class="w-large center">
+    <div class="w-large ">
       <div class="m3-b">
         {{ .Content }}
       </div>
@@ -17,7 +17,7 @@
         </div>
         <div class="m6-b">
           <label class="block m05-b f3" for="">Ik zoek hulp bij het volgende project</label>
-          <textarea class="form-field sanserif" name="" id="" cols="30" rows="10" placeholder="Omschrijf je project in een paar zinnen"></textarea>
+          <textarea class="form-field sanserif" name="omschrijving" id="" cols="30" rows="10" placeholder="Omschrijf je project in een paar zinnen"></textarea>
         </div>
         <div class="m6-b">
           <label class="block m05-b f3" for="">De deadline hier voor is</label>
