--- a/themes/frank/src/css/_helpers.css
+++ b/themes/frank/src/css/_helpers.css
@@ -135,6 +135,14 @@
   background-color: #ee3632;
 }
 
+.bg-lxr-gold {
+  background-color: #c4a183;
+}
+
+.bg-3sixty5-gold {
+  background-color: #ac9761;
+}
+
 .bg-frits-red {
   background-color: #cd202c;
 }
